--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<p>La peluquería es mucho más que el simple cuidado del cabello; es un arte que mezcla técnica, estilo y creatividad para realzar la belleza y la individualidad de cada persona. Este oficio incluye una variedad de servicios, como cortes, peinados, tintes, tratamientos y asesoramiento para mantener un cabello saludable y con estilo. Cada visita a una peluquería es una experiencia personalizada, donde los profesionales escuchan las necesidades y deseos del cliente para crear un look único que refleje su personalidad y resalte sus mejores atributos. Además, la peluquería está en constante evolución, adaptándose a las nuevas tendencias y técnicas para ofrecer resultados modernos y de calidad. Es un espacio de transformación, confianza y cuidado personal.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
