--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Amet lorem</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Las discotecas son lugares diseñados para el entretenimiento nocturno, donde la música, las luces y la energía se combinan para crear un ambiente vibrante y lleno de vida. En estos espacios, las personas se reúnen para bailar, socializar y disfrutar de una experiencia única, impulsada por DJs que mezclan ritmos de diferentes géneros musicales. Las discotecas suelen contar con efectos visuales como luces estroboscópicas, láseres y pantallas que complementan la música, creando un entorno inmersivo. Además de ser centros de diversión, son puntos de encuentro cultural donde se expresan tendencias en moda, música y estilos de vida.</p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
